--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,8 @@ ul {
 }
 
 .heding-sdw2 {
+    position: relative;
+    z-index: 2;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -443,7 +445,7 @@ ul {
     position: fixed;
     bottom: 20px;
     right: 30px;
-    z-index: 6;
+    z-index: 60;
     border: none;
     outline: none;
     background-color: gray;
